--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,8 +1,7 @@
-
 # import hextra as module
 module:
   imports:
-  - path: github.com/imfing/hextra
+    - path: github.com/imfing/hextra
 
 markup:
   # allow raw html
@@ -16,25 +15,14 @@ markup:
 
 menu:
   main:
-    - name: HtB
+    - name: HTB
       pageRef: /htb
       weight: 1
-    #    - name: Blockchain 
-    #      pageRef: /blockchain
-    #      weight: 2
-    #
-    #    - name: Contato ↗
-    #      url: "https://guisso.dev"
-    #      weight: 3
+
     - name: Search
       weight: 4
       params:
         type: search
-    #    - name: GitHub
-    #      weight: 5
-    #      url: "https://github.com/fguisso/seguranca-para-pessoas-desenvolvedoras"
-    #      params:
-    #        icon: github
 
 params:
   navbar:
